--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -3,25 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ulYRoH0mhCJK"
-      },
-      "source": [
-        "Todo:\n",
-        "- X Add all prediction apps, update URLs below\n",
-        "- X Ensure prediction apps have clear visualizations\n",
-        "- X Double check input/output files and example output format are correct!\n",
-        "- AntibodyProfiler: Accept HLT format PDB files, antigen chain\n",
-        "- New BioLib app: chotia_to_hlt for choosing own target and antibody framework\n",
-        "- Stress-test servers, spin up capacity before workshop\n",
-        "\n",
-        "Nice to have:\n",
-        "- Leaderboard\n",
-        "- \"Master\" BioLib app implementing all functionality in one app (easier to parallelize)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "wwgkXbL2hCJK"
       },
       "source": [
@@ -36,7 +17,7 @@
         "id": "GXkbBhvihCJK"
       },
       "source": [
-        "In this notebook, you may choose your own antibody framework and target protein structure, and design novel antibody binders. This workflow has been shown to generate weak antibody binders in the μM to nM range, with up to ~5-10% experimental success rates for some degree of binding."
+        "In this notebook, you may choose your own antibody framework and target protein structure, and design novel antibody binders. This workflow has been shown to generate weak antibody binders in the μM to nM range, with ~2% experimental success rates for some degree of binding after in-silico filtering."
       ]
     },
     {
@@ -57,25 +38,40 @@
       "source": [
         "Antibody therapeutics represent a substantial market (approximately $550M USD) with tremendous potential for treating various diseases. Traditional approaches to antibody discovery are slow and laborious, typically involving immunizing mice or screening random libraries.\n",
         "\n",
-        "This notebook implements the RFantibody pipeline for structure-based design of de novo antibodies against a chosen target.\n",
+        "This notebook implements the [RFAntibody pipeline](https://www.biorxiv.org/content/10.1101/2024.03.14.585103v2) for structure-based design of de novo antibodies against a chosen target.\n",
         "\n",
-        "This workflow only requires two inputs:\n",
+        "**Inputs:**\n",
         "- i) An input antibody framework (e.g. hu-4D5-8_Fv.pdb - a humanized ScFv antibody framework PDB\n",
-        "- ii) A target protein of interest (e.g. respiratory syncytial virus (RSV) protein) with binding site (epitope residues)\n",
+        "- ii) A target protein of interest (e.g. respiratory syncytial virus (RSV) protein)\n",
+        "- iii) Binding site on the target protein (epitope residues)\n",
         "\n",
-        "And runs the following three methods:\n",
+        "**Workflow:**\n",
         "1. **De novo design of an antibody backbone targeting a protein of interest** - using an antibody-finetuned version of RFdiffusion ([Nature paper](https://www.nature.com/articles/s41586-023-06415-8))\n",
         "2. **Design of the CDR loop residues** - using ProteinMPNN ([Science paper](https://www.science.org/doi/10.1126/science.add2187))\n",
         "3. **Filtering designs on predicted structure 'self-consistency'** - using an antibody-finetuned version of RoseTTAFold2 ([Preprint](https://www.biorxiv.org/content/10.1101/2023.05.24.542179v1)), shown to correlate with significantly improved experimental success rates.\n",
         "\n",
-        "The RFantibody pipeline itself is described in detail in [this preprint](https://www.biorxiv.org/content/10.1101/2024.03.14.585103v2)."
+        "**Output:**\n",
+        "- Predicted 3D antibody-antigen complex and designed sequences"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "WoNlid3HhCJL"
-      },
+      "metadata": {},
+      "source": [
+        "<img src=\"img/whiteboard4.jpg\" style=\"width:60%;\">"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "\n",
+        "---\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
       "source": [
         "**Advantages:**\n",
         "- Designs novel antibodies binding a target protein\n",
@@ -85,9 +81,14 @@
         "\n",
         "**Current limitations:**\n",
         "- Generated antibodies at best tend to be weak binders (low binding affinities in μM to nM range)\n",
-        "- Often low experimental success rates (~5-10% for some degree of binding) - heavily dependent on filtering\n",
-        "- No screening for e.g. human immunogenicity\n",
-        "\n",
+        "- Often low experimental success rates (~2% for some degree of binding) - heavily dependent on filtering\n",
+        "- No screening for e.g. human immunogenicity"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "**Read more:**\n",
         "- To read more about this workflow, please refer to the RFAntibody Github page: https://github.com/RosettaCommons/RFantibody/blob/main/README.md\n",
         "- And the Biorxiv pre-print by Bennett et al 2024: https://www.biorxiv.org/content/10.1101/2024.03.14.585103v2"
@@ -96,9 +97,7 @@
     {
       "cell_type": "markdown",
       "metadata": {},
-      "source": [
-        "<img src=\"img/whiteboard4.jpg\" style=\"width:70%;\">"
-      ]
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -325,34 +324,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 13,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "l8MUkmJthCJL",
-        "outputId": "ff646f02-c742-4668-c6b2-79db01f10878"
-      },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "INFO:biolib:Saving 4 files to output/rfdiffusion...\n"
-          ]
-        }
-      ],
-      "source": [
-        "# Download job results when done\n",
-        "if job_rfdiff.is_pending():\n",
-        "    print(\"Job is still running...\")\n",
-        "else:\n",
-        "    \n",
-        "    "
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "RSxrIpV9hCJM"
@@ -429,42 +400,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 19,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Dap8bLxAhCJM",
-        "outputId": "00ab2151-75bb-467d-d1c3-0a9e5d227090"
-      },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "INFO:biolib:Saving 3 files to output/proteinmpnn...\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Skipping output/proteinmpnn/_0_dldesign_0.pdb as a file with that name already exists locally.\n",
-            "Skipping output/proteinmpnn/_0_dldesign_1.pdb as a file with that name already exists locally.\n",
-            "Skipping output/proteinmpnn/_0_dldesign_2.pdb as a file with that name already exists locally.\n",
-            "[File \"/_0_dldesign_0.pdb\" with size of 129936 bytes, File \"/_0_dldesign_1.pdb\" with size of 129936 bytes, File \"/_0_dldesign_2.pdb\" with size of 129936 bytes]\n"
-          ]
-        }
-      ],
-      "source": [
-        "# Download job results when done\n",
-        "if job_mpnn.is_pending():\n",
-        "    print(\"Job is still running...\")\n",
-        "else:\n"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "g3v6Po30hCJM"
@@ -514,7 +449,9 @@
         "job_rf2 = app_rf2.run(\n",
         "    pdb=input_dir,\n",
         "    num_recycles=3,\n",
-        ")"
+        ")\n",
+        "job_rf2.save_files(\"output/rosettafold2\", skip_file_if_exists=True)\n",
+        "job_rf2.list_output_files()"
       ]
     },
     {
@@ -547,149 +484,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 21,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "iMwURoBfhCJM",
-        "outputId": "ae4a2561-4d62-40b6-a6c8-85a184aed91c"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Job is still running...\n"
-          ]
-        }
-      ],
-      "source": [
-        "# Try to save job output files\n",
-        "if job_rf2.is_pending():\n",
-        "    print(\"Job is still running...\")\n",
-        "else:\n",
-        "    job_rf2.save_files(\"output/rosettafold2\", skip_file_if_exists=True)\n",
-        "    job_rf2.list_output_files()"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "KhAiCmw8hCJM"
-      },
-      "source": [
-        "## Step 4 of 4: Assess designs for pharmaceutical liabilities with [AntibodyProfiler](https://biolib.com/BioLibDevelopment/AntibodyProfiler/)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "s22JuJdchCJM"
-      },
-      "source": [
-        "*Estimated time: <1 minute*\n",
-        "\n",
-        "Here, we will use our in-house AntibodyProfiler tool to assess our antibody PDBs for how closely they relate to molecular properties of already approved therapeutic antibodies. Antibody designs outside this range may indicate higher risk of pharmaceutical liabilities, providing another early filtering step before designs are sent to the lab for experimental validation.\n",
-        "\n",
-        "We recommend selecting designs within 2-sigma deviation of approved antibodies for the following metrics:\n",
-        "- Total CDR length between 39-60 residues\n",
-        "- CDR3 heavy chain length between 5-23 residues\n",
-        "- Patches of surface hydrophobicity in CDR vicinity (PSH) between 30-150\n",
-        "\n",
-        "### [AntibodyProfiler input parameters](https://biolib.com/BioLibDevelopment/AntibodyProfiler/)\n",
-        "\n",
-        "- **pdb**: Directory containing the PDB files from ProteinMPNN"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 11,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "JJu9BepqhCJM",
-        "outputId": "be06ab4f-202a-48e0-b253-5563ddb94222"
-      },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "INFO:biolib:Loaded project BioLibDevelopment/AntibodyProfiler:0.0.32\n",
-            "INFO:biolib:View the result in your browser at: https://biolib.com/results/60b04ed8-db70-4373-ae9c-e01eedd9e346/\n"
-          ]
-        }
-      ],
-      "source": [
-        "# Input directory\n",
-        "input_dir = \"output/rosettafold2\"  # Using the output from RosettaFold2\n",
-        "\n",
-        "# Run AntibodyProfiler\n",
-        "app_abprofiler = biolib.load('BioLibDevelopment/AntibodyProfiler') # TODO - push to main branch so the last version is used\n",
-        "app_abprofiler = app_abprofiler.start(\n",
-        "    pdb=input_dir, # DEBUG - need to add automatic csv file generation for dir input, accepting hlt format\n",
-        ")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "2rEi4q4GhCJM"
-      },
-      "source": [
-        "#### Wait for AntibodyProfiler output files (<1 minute)\n",
-        "AntibodyProfiler calculates developability metrics compared to approved therapeutic antibodies already on the market, giving warning flags for input PDBs outside this range.\n",
-        "\n",
-        "Main output file:\n",
-        "- results.csv (Summary metrics compared to therapeutically approved antibodies for each PDB)\n",
-        "\n",
-        "```csv\n",
-        "pdb_name,       cdrh3_length,total_cdr_length,flag_cdrh3,flag_total_cdr,psh_value,flag_psh\n",
-        "_0_dldesign_2,  13,          35,              none,       yellow,       116.90, none\n",
-        "_0_dldesign_1,  13,          35,              none,       yellow,       90.53,  none\n",
-        "_0_dldesign_0,  13,          35,              none,       yellow,       149.84, none\n",
-        "```\n",
-        "\n",
-        "Of these, our target values are:\n",
-        "- CDR3 heavy chain length (cdrh3_length): 5-23\n",
-        "- CDR length (total_cdr_length): 39-60\n",
-        "- Patches of surface hydrophobicity in CDR vicinity (psh_value): 30-150\n",
-        "\n",
-        "Values outside this range will be flagged with a color, depending on where they fall in the distribution of human therapeutic antibodies."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 12,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "R_l9Ec9xhCJM",
-        "outputId": "41e7cfab-ced2-40b8-dc2e-1028ff72a0db"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Job is still running...\n"
-          ]
-        }
-      ],
-      "source": [
-        "# Try to save job output files\n",
-        "if app_abprofiler.is_pending():\n",
-        "    print(\"Job is still running...\")\n",
-        "else:\n",
-        "    job_abprofiler.save_files(\"output/abprofiler\", skip_file_if_exists=True)\n",
-        "    job_abprofiler.list_output_files()"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "-ohAYF6qhCJM"
@@ -704,17 +498,31 @@
         "3. **RosettaFold2 (antibody fine-tuned)**: Filtering designs based on predicted structure quality\n",
         "4. **AntibodyProfiler**: Further selection of designs based on similarity to therapeutically approved antibodies\n",
         "\n",
-        "This computational pipeline can generate designs with a success rate of approximately 5-10% for some degree of binding to the target. Further experimental validation and optimization is likely to be required to improve binding affinity and other pharmaceutical properties.\n",
+        "This computational pipeline can generate designs with a success rate of approximately 2% for some degree of binding to the target. Further experimental validation and optimization is likely to be required to improve binding affinity and other pharmaceutical properties.\n",
         "\n",
         "For larger scale antibody design campaigns, we recommended to generating thousands of designs to increase the chances of finding high-quality binders, as the current filtering metrics are still highly limited."
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
       "metadata": {
         "id": "3ESnZr39rdTR"
       },
+      "source": [
+        "### Bring your own antibody target\n",
+        "\n",
+        "For designing antibodies against your own target, we refer to the RFAntibody guidelines for, accessible at this URL:\n",
+        "https://github.com/RosettaCommons/RFantibody\n",
+        "\n",
+        "```text\n",
+        "\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
       "outputs": [],
       "source": []
     }
