--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -17,7 +17,7 @@
         "id": "GXkbBhvihCJK"
       },
       "source": [
-        "In this notebook, you may choose your own antibody framework and target protein structure, and design novel antibody binders. This workflow has been shown to generate weak antibody binders in the μM to nM range, with ~2% experimental success rates for some degree of binding after in-silico filtering."
+        "In this notebook, you may choose your own antibody framework and target protein structure, and design novel antibody binders. This workflow by the [Baker Lab](https://www.bakerlab.org/2025/02/28/designing-antibodies-with-rfdiffusion/) has been shown to generate weak antibody binders in the μM to nM range, with ~2% experimental success rates for some degree of binding after in-silico filtering."
       ]
     },
     {
@@ -38,7 +38,7 @@
       "source": [
         "Antibody therapeutics represent a substantial market (approximately $550M USD) with tremendous potential for treating various diseases. Traditional approaches to antibody discovery are slow and laborious, typically involving immunizing mice or screening random libraries.\n",
         "\n",
-        "This notebook implements the [RFAntibody pipeline](https://www.biorxiv.org/content/10.1101/2024.03.14.585103v2) for structure-based design of de novo antibodies against a chosen target.\n",
+        "This notebook implements the [RFAntibody pipeline](https://github.com/RosettaCommons/RFantibody/tree/main) (described in this [pre-print](https://www.biorxiv.org/content/10.1101/2024.03.14.585103v2) ) for structure-based design of de novo antibodies against a chosen target.\n",
         "\n",
         "**Inputs:**\n",
         "- i) An input antibody framework (e.g. hu-4D5-8_Fv.pdb - a humanized ScFv antibody framework PDB\n",
@@ -46,12 +46,14 @@
         "- iii) Binding site on the target protein (epitope residues)\n",
         "\n",
         "**Workflow:**\n",
-        "1. **De novo design of an antibody backbone targeting a protein of interest** - using an antibody-finetuned version of RFdiffusion ([Nature paper](https://www.nature.com/articles/s41586-023-06415-8))\n",
-        "2. **Design of the CDR loop residues** - using ProteinMPNN ([Science paper](https://www.science.org/doi/10.1126/science.add2187))\n",
-        "3. **Filtering designs on predicted structure 'self-consistency'** - using an antibody-finetuned version of RoseTTAFold2 ([Preprint](https://www.biorxiv.org/content/10.1101/2023.05.24.542179v1)), shown to correlate with significantly improved experimental success rates.\n",
+        "1. **RFDiffusion** generation of a bound antibody-antigen complex (backbone only) - using an antibody-finetuned version of RFdiffusion ([Nature paper](https://www.nature.com/articles/s41586-023-06415-8))\n",
+        "2. **ProteinMPNN** generation of designed CDR sequences, the complementarity determining loops involved in antibody binding ([Science paper](https://www.science.org/doi/10.1126/science.add2187))\n",
+        "3. **RosettaFold2** structure-prediction of designed sequences, to filter out low confidence structures - using an antibody-finetuned version of RoseTTAFold2 ([Preprint](https://www.biorxiv.org/content/10.1101/2023.05.24.542179v1)).\n",
+        "\n",
+        "The last step has been shown to dramatically improve experimental success rates, by a factor of 10-20X.\n",
         "\n",
         "**Output:**\n",
-        "- Predicted 3D antibody-antigen complex and designed sequences"
+        "- De novo designed antibody sequences, predicted to bind the target protein"
       ]
     },
     {
@@ -95,8 +97,10 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {},
+      "outputs": [],
       "source": []
     },
     {
@@ -199,10 +203,17 @@
       },
       "source": [
         "#### iii) Bring your own target (optional)\n",
-        "You may also choose your own antibody framework and target PDB, prepared with this script:\n",
+        "You may also choose your own antibody framework and target PDB. Please see the bottom of this notebook, and the RFAntibody guide linked below:\n",
         "https://github.com/RosettaCommons/RFantibody?tab=readme-ov-file#input-preparation\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -511,20 +522,31 @@
       "source": [
         "### Bring your own antibody target\n",
         "\n",
-        "For designing antibodies against your own target, we refer to the RFAntibody guidelines for, accessible at this URL:\n",
-        "https://github.com/RosettaCommons/RFantibody\n",
+        "In order to provide your own target PDB, you'll need to convert it into an HLT format first ([described here](https://github.com/RosettaCommons/RFantibody/blob/main/README.md#hlt-file-format) ).\n",
         "\n",
-        "```text\n",
         "\n",
-        "```"
+        "- i) Upload yyour target PDB file to the TargetPDBtoHLT app on BioLib: https://biolib.com/BioITWorkshop/TargetPDBtoHLT/\n",
+        "- ii) Download the new HLT-formatted PDB file\n",
+        "- iii) Change the target_pdb parameter in Step 1 on top of the notebook\n",
+        "- iv) Select the target epitope residues\n",
+        "\n",
+        "\n"
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "source": [
+        "<img src=\"img/rfantibody.png\" style=\"width:60%;\">"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "\n",
+        "For practical tips on antibody design, we refer to Baker Lab's RFAntibody README's [practical considerations for Antibody Design ](https://github.com/RosettaCommons/RFantibody/blob/main/README.md#practical-considerations-for-antibody-design)."
+      ]
     }
   ],
   "metadata": {
