--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -67,14 +67,6 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "\n",
-        "---\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
         "**Advantages:**\n",
         "- Designs novel antibodies binding a target protein\n",
         "- Can target most epitope binding region of interest (preferring structured regions)\n",
@@ -97,11 +89,11 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "source": [
+        "---"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -127,7 +119,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -143,7 +135,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -157,7 +149,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "2025-03-31 11:26:18,087 | INFO : Already signed in\n"
+            "2025-03-31 15:39:56,999 | INFO : Already signed in\n"
           ]
         }
       ],
@@ -185,7 +177,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 5,
       "metadata": {
         "id": "geQVU_mXhCJL"
       },
@@ -209,11 +201,11 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
       "metadata": {},
-      "outputs": [],
-      "source": []
+      "source": [
+        "---"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -235,32 +227,38 @@
       "source": [
         "#### [RFDiffusion input parameters](https://biolib.com/BioITWorkshop/RFDiffusionAntibody)\n",
         "\n",
-        "Already set above:\n",
         "- **framework_pdb**: Path to the antibody framework we're using (e.g. hu-4D5-8_Fv.pdb)\n",
         "- **target_pdb**: Path to the target protein structure (e.g. rsv_site3.pdb)\n",
         "- **hotspot_res**: List of hotspot residues defining our epitope (target binding site)\n",
-        "\n",
-        "New parameters:\n",
-        "- **design_loops**: Dictionary mapping each CDR loop to a range of allowed loop lengths\n",
+        "- **design_loops**: Possible range of lengths of the CDR loops.\n",
         "  - L1, L2, L3: Light chain CDR loops\n",
         "  - H1, H2, H3: Heavy chain CDR loops\n",
         "  - Numbers specify length ranges (e.g., L1:8-13 means loop L1 can be 8-13 residues long)\n",
-        "  - Example: `[L1:8-13,L2:7,L3:9-11,H1:7,H2:6,H3:5-13]`\n",
-        "- **num_designs**: Number of designs to generate (20)\n"
+        "- **num_designs**: Number of 3D designs to generate (1)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "BKVVCyQNsiZt"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Framework PDB exists: True\n",
+            "Target PDB exists: True\n",
+            "(If these are missing, please download from https://github.com/mhoie/bioit-rfantibody before proceeding)\n"
+          ]
+        }
+      ],
       "source": [
         "# RFDiffusion input\n",
         "framework_pdb = \"hu-4D5-8_Fv.pdb\"\n",
         "target_pdb = \"rsv_site3.pdb\"\n",
-        "hotspot_res = \"[T305,T456]\"'\n",
+        "hotspot_res = \"[T305,T456]\"\n",
         "\n",
         "# RFDiffusion parameters\n",
         "design_loops = \"[L1:8-13,L2:7,L3:9-11,H1:7,H2:6,H3:5-13]\"\n",
@@ -275,7 +273,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -285,12 +283,40 @@
       },
       "outputs": [
         {
-          "name": "stderr",
+          "name": "stdout",
           "output_type": "stream",
           "text": [
-            "INFO:biolib:Loaded project BioITWorkshop/RFDiffusionAntibody:0.0.2\n",
-            "INFO:biolib:View the result in your browser at: https://biolib.com/results/5fb1dfeb-fc93-490e-a5f2-7cd5f683e950/\n"
+            "2025-03-31 15:41:43,238 | INFO : Loaded project BioITWorkshop/RFDiffusionAntibody:0.0.26\n",
+            "2025-03-31 15:41:49,612 | INFO : View the result in your browser at: https://biolib.com/results/53ec7966-2f00-4ebb-8ace-42be81e739e5/\n",
+            "2025-03-31 15:41:51,699 | INFO : Cloud: Initializing\n",
+            "2025-03-31 15:41:51,700 | INFO : Cloud: Pulling images...\n",
+            "2025-03-31 15:41:51,702 | INFO : Cloud: Computing...\n",
+            "Running RFDiffusion Antibody...\n",
+            "Starting generation of 1 design(s)...\n",
+            "Loading model...\n",
+            "Design 0: timestep 45/50\n",
+            "Completed generating 1 design(s)...\n",
+            "2025-03-31 15:49:52,909 | INFO : Cloud: Computation finished\n",
+            "2025-03-31 15:49:52,912 | INFO : Cloud: Result Ready\n",
+            "2025-03-31 15:49:52,912 | INFO : Waiting for job 53ec7966-2f00-4ebb-8ace-42be81e739e5 to finish...\n",
+            "2025-03-31 15:49:53,557 | INFO : Job 53ec7966-2f00-4ebb-8ace-42be81e739e5 has finished.\n",
+            "2025-03-31 15:49:55,401 | INFO : Saving 6 files to output/rfdiffusion...\n"
           ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "[File \"/ab_design_0.trb\" with size of 99153 bytes,\n",
+              " File \"/ab_design_0.pdb\" with size of 131601 bytes,\n",
+              " File \"/input_target.pdb\" with size of 461944 bytes,\n",
+              " File \"/input_framework.pdb\" with size of 131172 bytes,\n",
+              " File \"/traj/ab_design_0_Xt-1_traj.pdb\" with size of 4939255 bytes,\n",
+              " File \"/traj/ab_design_0_pX0_traj.pdb\" with size of 11554500 bytes]"
+            ]
+          },
+          "execution_count": 8,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -332,6 +358,14 @@
         "\n",
         "ATOM      5  N   VAL H   2      22.855  -6.630 -18.891  1.00  1.00\n",
         "```"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Example RFDiffusion trajectory:\n",
+        "![img/diffuse.gif](img/diffuse.gif)"
       ]
     },
     {
