--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -458,7 +458,7 @@
         "id": "g3v6Po30hCJM"
       },
       "source": [
-        "## Step 3 / 3: Filter designs for predicted structure self-consistency, with [RosettaFold2 antibody fine-tuned](https://biolib.com/BioITWorkshop/RF2Antibody)\n",
+        "## Step 3 / 3: Predict structure, filter for confidence / self-consistency, with [RosettaFold2 antibody fine-tuned](https://biolib.com/BioITWorkshop/RF2Antibody)\n",
         "*Estimated time: ~1-2 minutes*\n",
         "\n",
         "The final step uses an antibody-finetuned version of RoseTTAFold2 (RF2) to predict the structure of the designed sequences and assess whether RF2 is confident that the sequence will bind as designed.\n",
