--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -58,14 +58,18 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "uIOCojMfut1U"
+      },
       "source": [
-        "<img src=\"img/whiteboard4.jpg\" style=\"width:60%;\">"
+        "<img src=\"https://github.com/mhoie/workshop/blob/main/img/whiteboard4.jpg?raw=1\" style=\"width:60%;\">"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "FdNapblqut1U"
+      },
       "source": [
         "**Advantages:**\n",
         "- Designs novel antibodies binding a target protein\n",
@@ -81,7 +85,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "u0tjwNeOut1U"
+      },
       "source": [
         "**Read more:**\n",
         "- To read more about this workflow, please refer to the RFAntibody Github page: https://github.com/RosettaCommons/RFantibody/blob/main/README.md\n",
@@ -90,7 +96,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "h3-v7gaCut1U"
+      },
       "source": [
         "---"
       ]
@@ -119,13 +127,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 7,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "NyBRznjZhCJL",
-        "outputId": "e6d91fe4-7e27-424c-c00b-b0510caced8b"
+        "id": "NyBRznjZhCJL"
       },
       "outputs": [],
       "source": [
@@ -135,21 +139,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 8,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 69
+          "base_uri": "https://localhost:8080/"
         },
         "id": "hpZtb9ewhCJL",
-        "outputId": "20567a35-45ee-4ea1-e150-ab536ca9fa8d"
+        "outputId": "20226cc7-c02d-478d-daf8-85841d574f45"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stderr",
           "text": [
-            "2025-03-31 15:39:56,999 | INFO : Already signed in\n"
+            "INFO:biolib_no_user_data:Already signed in\n"
           ]
         }
       ],
@@ -177,7 +180,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 9,
       "metadata": {
         "id": "geQVU_mXhCJL"
       },
@@ -202,7 +205,9 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "H7zuln9qut1V"
+      },
       "source": [
         "---"
       ]
@@ -239,14 +244,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 10,
       "metadata": {
-        "id": "BKVVCyQNsiZt"
+        "id": "BKVVCyQNsiZt",
+        "outputId": "4916bd12-f69c-4d66-a3bd-09e3d2b1fc57",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Framework PDB exists: True\n",
             "Target PDB exists: True\n",
@@ -273,54 +282,91 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "s6CU5W0OhCJL",
-        "outputId": "236dadd4-5ad4-4698-c448-d93922984c16"
+        "outputId": "b5166af4-f602-4133-b453-d5469ab05825"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stderr",
           "text": [
-            "2025-03-31 15:41:43,238 | INFO : Loaded project BioITWorkshop/RFDiffusionAntibody:0.0.26\n",
-            "2025-03-31 15:41:49,612 | INFO : View the result in your browser at: https://biolib.com/results/53ec7966-2f00-4ebb-8ace-42be81e739e5/\n",
-            "2025-03-31 15:41:51,699 | INFO : Cloud: Initializing\n",
-            "2025-03-31 15:41:51,700 | INFO : Cloud: Pulling images...\n",
-            "2025-03-31 15:41:51,702 | INFO : Cloud: Computing...\n",
-            "Running RFDiffusion Antibody...\n",
-            "Starting generation of 1 design(s)...\n",
-            "Loading model...\n",
-            "Design 0: timestep 45/50\n",
-            "Completed generating 1 design(s)...\n",
-            "2025-03-31 15:49:52,909 | INFO : Cloud: Computation finished\n",
-            "2025-03-31 15:49:52,912 | INFO : Cloud: Result Ready\n",
-            "2025-03-31 15:49:52,912 | INFO : Waiting for job 53ec7966-2f00-4ebb-8ace-42be81e739e5 to finish...\n",
-            "2025-03-31 15:49:53,557 | INFO : Job 53ec7966-2f00-4ebb-8ace-42be81e739e5 has finished.\n",
-            "2025-03-31 15:49:55,401 | INFO : Saving 6 files to output/rfdiffusion...\n"
+            "INFO:biolib:Loaded project BioITWorkshop/RFDiffusionAntibody:1.0.6\n",
+            "INFO:biolib:View the result in your browser at: https://biolib.com/results/4cfc5aa4-735e-48fa-b740-baebda571148/\n",
+            "INFO:biolib:Cloud: Initializing\n",
+            "INFO:biolib:Cloud: Pulling images...\n",
+            "INFO:biolib:Cloud: Computing...\n"
           ]
         },
         {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Running RFDiffusion Antibody...\r\n",
+            "Starting generation of 1 design(s)...\r\n",
+            "Loading model...\n",
+            "Design 0: timestep 15/50\n",
+            "Design 0: timestep 20/50\n",
+            "Design 0: timestep 25/50\n",
+            "Design 0: timestep 30/50\n",
+            "Design 0: timestep 35/50\n",
+            "Design 0: timestep 40/50\n",
+            "Design 0: timestep 45/50\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "INFO:biolib:Cloud: Computation finished\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Completed generating 1 design(s)...\r\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "INFO:biolib:Cloud: Result Ready\n",
+            "INFO:biolib:Waiting for job 4cfc5aa4-735e-48fa-b740-baebda571148 to finish...\n",
+            "INFO:biolib:Job 4cfc5aa4-735e-48fa-b740-baebda571148 has finished.\n",
+            "INFO:biolib:Saving 4 files to output/rfdiffusion...\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Skipping output/rfdiffusion/ab_design_0.trb as a file with that name already exists locally.\n",
+            "Skipping output/rfdiffusion/ab_design_0.pdb as a file with that name already exists locally.\n",
+            "Skipping output/rfdiffusion/traj/ab_design_0_Xt-1_traj.pdb as a file with that name already exists locally.\n",
+            "Skipping output/rfdiffusion/traj/ab_design_0_pX0_traj.pdb as a file with that name already exists locally.\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[File \"/ab_design_0.trb\" with size of 99153 bytes,\n",
-              " File \"/ab_design_0.pdb\" with size of 131601 bytes,\n",
-              " File \"/input_target.pdb\" with size of 461944 bytes,\n",
-              " File \"/input_framework.pdb\" with size of 131172 bytes,\n",
-              " File \"/traj/ab_design_0_Xt-1_traj.pdb\" with size of 4939255 bytes,\n",
-              " File \"/traj/ab_design_0_pX0_traj.pdb\" with size of 11554500 bytes]"
+              "[File \"/ab_design_0.trb\" with size of 98153 bytes,\n",
+              " File \"/ab_design_0.pdb\" with size of 130086 bytes,\n",
+              " File \"/traj/ab_design_0_Xt-1_traj.pdb\" with size of 4888670 bytes,\n",
+              " File \"/traj/ab_design_0_pX0_traj.pdb\" with size of 11487500 bytes]"
             ]
           },
-          "execution_count": 8,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 11
         }
       ],
       "source": [
-        "\n",
         "# Run RFdiffusion through BioLib\n",
         "app_rfdiff = biolib.load('BioITWorkshop/RFDiffusionAntibody')  # Replace with actual RFantibody app ID\n",
         "job_rfdiff = app_rfdiff.run(\n",
@@ -362,18 +408,22 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "1DTHEuC-ut1W"
+      },
       "source": [
         "### RFDiffusion training to predict protein structures\n",
-        "<img src=\"img/rfdiff.png\" style=\"width:60%;\">"
+        "<img src=\"https://github.com/mhoie/workshop/blob/main/img/rfdiff.png?raw=1\" style=\"width:60%;\">"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "dbCF6KqSut1W"
+      },
       "source": [
         "### Example RFDiffusion trajectory:\n",
-        "![img/diffuse.gif](img/diffuse.gif)"
+        "![img/diffuse.gif](https://github.com/mhoie/workshop/blob/main/img/diffuse.gif?raw=1)"
       ]
     },
     {
@@ -394,21 +444,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "AfmUon9ThCJM",
-        "outputId": "0aba660b-c8f0-41af-9628-5b2e293d6d63"
+        "outputId": "6d33d5ba-906c-4dd3-8906-4aad1465c56e"
       },
       "outputs": [
         {
-          "name": "stderr",
           "output_type": "stream",
+          "name": "stderr",
           "text": [
-            "INFO:biolib:Loaded project BioITWorkshop/ProteinMPNNAb:0.0.3\n",
-            "INFO:biolib:View the result in your browser at: https://biolib.com/results/7870dc6f-0e88-4c28-a602-cfcf9990791f/\n"
+            "INFO:biolib:Loaded project BioITWorkshop/ProteinMPNN:1.0.3\n"
           ]
         }
       ],
@@ -417,10 +466,10 @@
         "input_dir = \"output/rfdiffusion\"  # Using the output from RFdiffusion\n",
         "\n",
         "# Run ProteinMPNN\n",
-        "app_mpnn = biolib.load('BioITWorkshop/ProteinMPNNAb')\n",
+        "app_mpnn = biolib.load('BioITWorkshop/ProteinMPNN')\n",
         "job_mpnn = app_mpnn.run(\n",
         "    pdb=input_dir,\n",
-        "    num_seqs_per_struct=3\n",
+        "    num_seqs_per_struct=4\n",
         ")\n",
         "job_mpnn.save_files(\"output/proteinmpnn\", skip_file_if_exists=True)\n",
         "job_mpnn.list_output_files()"
@@ -475,7 +524,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -577,14 +626,18 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "hUXXUyaQut1W"
+      },
       "source": [
-        "<img src=\"img/rfantibody.png\" style=\"width:60%;\">"
+        "<img src=\"https://github.com/mhoie/workshop/blob/main/img/rfantibody.png?raw=1\" style=\"width:60%;\">"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "EUnuOHhtut1W"
+      },
       "source": [
         "\n",
         "For practical tips on antibody design, we refer to Baker Lab's RFAntibody README's [practical considerations for Antibody Design ](https://github.com/RosettaCommons/RFantibody/blob/main/README.md#practical-considerations-for-antibody-design)."
